--- a/package.json
+++ b/package.json
@@ -39,6 +39,13 @@
     ]
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "faker": "^5.5.3",
     "stylelint": "^13.3.3",
     "stylelint-config-standard": "^20.0.0",
